--- a/services.html
+++ b/services.html
@@ -181,7 +181,7 @@
       <a class="unlock-btn" href="booking.html">Unlock This</a>
     </div>
     <div class="service-card">
-      <img src="https://images.unsplash.com/photo-1621607511344-02c9b100c05e" alt="Growth">
+<img src="https://images.unsplash.com/photo-1600880292089-90a7e086ee1d" alt="Growth Strategy Meeting">
       <h3>Growth Package</h3>
       <p>Upgrade your sales engine. CRM workflows, coaching, and strategic enablement tools.</p>
       <ul class="feature-list">
