--- a/services.html
+++ b/services.html
@@ -181,7 +181,7 @@
       <a class="unlock-btn" href="booking.html">Unlock This</a>
     </div>
     <div class="service-card">
-      <img src="https://unsplash.com/photos/people-sitting-on-chair-5U_28ojjgms" alt="Growth">
+     <img src="https://images.unsplash.com/photo-1573164574238-160d0d94add6?auto=format&fit=crop&w=800&q=80" alt="Growth Strategy Meeting">
       <h3>Growth Package</h3>
       <p>Upgrade your sales engine. CRM workflows, coaching, and strategic enablement tools.</p>
       <ul class="feature-list">
