--- a/services.html
+++ b/services.html
@@ -181,18 +181,10 @@
     </div>
   </nav>
 
- <!-- HERO SECTION -->
-<header class="hero">
-  <div style="max-width: 800px; margin: 0 auto;">
-    <h1 style="font-size: 2.8rem; margin-bottom: 1rem;">
-      Unlock Scalable Growth.<br>One Service at a Time.
-    </h1>
-    <p style="font-size: 1.2rem; line-height: 1.6;">
-      We don’t just consult — we engineer your growth infrastructure with precision frameworks and full-funnel enablement.
-    </p>
-  </div>
-</header>
-
+  <header class="hero">
+    <h1>Unlock Scalable Growth. One Service at a Time.</h1>
+    <p>We don’t just consult — we engineer your growth infrastructure with precision frameworks and full-funnel enablement.</p>
+  </header>
 
   <section class="services-grid">
     <div class="service-card">
@@ -249,7 +241,7 @@
         <p>Tools, enablement, CRM flows.</p>
       </div>
       <div class="how-step">
-        <img src="https://cdn-icons-png.flaticon.com/512/753/753345.png" alt="Launch Icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/4211/4211730.png" alt="Launch Icon">
         <strong>Launch & Scale</strong>
         <p>Activate and monitor outcomes.</p>
       </div>
