--- a/services.html
+++ b/services.html
@@ -236,12 +236,12 @@
         <p>Map out audience targets and messaging.</p>
       </div>
       <div class="how-step">
-        <img src="https://cdn-icons-png.flaticon.com/512/3500/3500833.png" alt="Build Icon">
+       <img src="https://cdn-icons-png.flaticon.com/512/861/861512.png" alt="Wrench Icon">
         <strong>Build the Engine</strong>
         <p>Tools, enablement, CRM flows.</p>
       </div>
       <div class="how-step">
-        <img src="https://cdn-icons-png.flaticon.com/512/4211/4211730.png" alt="Launch Icon">
+       <img src="https://cdn-icons-png.flaticon.com/512/3214/3214465.png" alt="Rocket Icon">
         <strong>Launch & Scale</strong>
         <p>Activate and monitor outcomes.</p>
       </div>
