--- a/services.html
+++ b/services.html
@@ -182,8 +182,18 @@
   </nav>
 
   <header class="hero">
-    <h1>Unlock Scalable Growth. One Service at a Time.</h1>
-    <p>We don’t just consult — we engineer your growth infrastructure with precision frameworks and full-funnel enablement.</p>
+    <!-- HERO SECTION -->
+<header class="hero">
+  <div style="max-width: 800px; margin: 0 auto;">
+    <h1 style="font-size: 2.8rem; margin-bottom: 1rem;">
+      Unlock Scalable Growth.<br>One Step at a Time.
+    </h1>
+    <p style="font-size: 1.2rem; line-height: 1.6;">
+      We don’t just consult — we engineer your growth infrastructure with precision frameworks and full-funnel enablement.
+    </p>
+  </div>
+</header>
+
   </header>
 
   <section class="services-grid">
