--- a/services.html
+++ b/services.html
@@ -246,12 +246,12 @@
         <p>Map out audience targets and messaging.</p>
       </div>
       <div class="how-step">
-       <img src="https://cdn-icons-png.flaticon.com/512/861/861512.png" alt="Wrench Icon">
+      <img src="assets/build-icon.png" alt="Build Icon" width="60" height="60" />
         <strong>Build the Engine</strong>
         <p>Tools, enablement, CRM flows.</p>
       </div>
       <div class="how-step">
-       <img src="https://cdn-icons-png.flaticon.com/512/3214/3214465.png" alt="Rocket Icon">
+       <img src="assets/launch-icon.png" alt="Launch Icon" width="60" height="60" />
         <strong>Launch & Scale</strong>
         <p>Activate and monitor outcomes.</p>
       </div>
