--- a/services.html
+++ b/services.html
@@ -167,21 +167,24 @@
   </style>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="nav-container">
+<!-- NAVBAR -->
+<nav class="navbar">
+  <div class="nav-container" style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
+    <div style="flex: 1;">
       <a href="index.html" class="logo">
         <img src="assets/Logo.png" alt="Keylight Growth Logo" />
       </a>
-      <ul class="nav-links">
-        <li><a href="services.html" class="active">Services</a></li>
+    </div>
+    <div style="flex: 1; display: flex; justify-content: flex-end; align-items: center; gap: 2rem;">
+      <ul class="nav-links" style="display: flex; gap: 2rem; list-style: none; margin: 0; padding: 0;">
+        <li><a href="services.html">Services</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <a href="booking.html" class="cta-button">Get Started</a>
     </div>
-  </nav>
-
-  <header class="hero">
+  </div>
+</nav>
     <!-- HERO SECTION -->
 <header class="hero">
   <div style="max-width: 800px; margin: 0 auto;">
