--- a/services.html
+++ b/services.html
@@ -212,7 +212,7 @@
       <a class="unlock-btn" href="booking.html">Unlock This</a>
     </div>
     <div class="service-card">
-      <img src="https://images.unsplash.com/photo-1590658268037-6bf12165a8df?auto=format&fit=crop&w=800&q=80" alt="Growth Strategy Meeting" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;" />>
+      <img src="https://images.unsplash.com/photo-1590658268037-6bf12165a8df?auto=format&fit=crop&w=800&q=80" alt="Growth Strategy Meeting" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;" />
       <h3>Growth Package</h3>
       <p>Upgrade your sales engine. CRM workflows, coaching, and strategic enablement tools.</p>
       <ul class="feature-list">
