--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   </div>
 </section>
 
-<section class="clients">
-  <h2>Trusted by Innovators</h2>
-  <div class="client-logos">
-    <img src="assets/shopify.png" alt="Shopify">
-    <img src="assets/cloudflare.png" alt="Cloudflare">
-    <img src="assets/replicant.png" alt="Replicant">
-    <img src="assets/rightsline.png" alt="Rightsline">
-    <img src="assets/ada.png" alt="Ada">
+<section style="background: #f9f9f9; padding: 4rem 2rem; text-align: center;">
+  <h2 style="font-size: 2rem; color: #09356B; margin-bottom: 2rem;">Trusted by Innovators</h2>
+  <div style="display: flex; justify-content: center; gap: 3rem; flex-wrap: wrap; align-items: center;">
+    <img src="assets/shopify-logo.png" alt="Shopify" style="height: 40px;" />
+    <img src="assets/cloudflare-logo.png" alt="Cloudflare" style="height: 40px;" />
+    <img src="assets/replicant-logo.png" alt="Replicant" style="height: 40px;" />
+    <img src="assets/rightsline-logo.png" alt="Rightsline" style="height: 40px;" />
+    <img src="assets/ada-logo.png" alt="Ada" style="height: 40px;" />
   </div>
 </section>
 
