--- a/services.html
+++ b/services.html
@@ -235,31 +235,33 @@
     </div>
   </section>
 
-  <section class="how-it-works">
-    <h2>How It Works</h2>
-    <div class="how-grid">
-      <div class="how-step">
-        <img src="https://cdn-icons-png.flaticon.com/512/1256/1256650.png" alt="Team Icon">
-        <strong>Meet the Team</strong>
-        <p>Align on vision and timelines.</p>
-      </div>
-      <div class="how-step">
-        <img src="https://cdn-icons-png.flaticon.com/512/5956/5956499.png" alt="Target Icon">
-        <strong>Define Your ICP</strong>
-        <p>Map out audience targets and messaging.</p>
-      </div>
-      <div class="how-step">
-      <img src="assets/build-icon.png" alt="Build Icon" width="60" height="60" />
-        <strong>Build the Engine</strong>
-        <p>Tools, enablement, CRM flows.</p>
-      </div>
-      <div class="how-step">
-       <img src="assets/launch-icon.png" alt="Launch Icon" width="60" height="60" />
-        <strong>Launch & Scale</strong>
-        <p>Activate and monitor outcomes.</p>
-      </div>
-    </div>
-  </section>
+<div class="how-grid">
+  <div class="how-step">
+    <img src="https://cdn-icons-png.flaticon.com/512/1256/1256650.png" alt="Team Icon">
+    <strong>Meet the Team</strong>
+    <p>Align on vision and timelines.</p>
+  </div>
+  <div class="how-step">
+    <img src="https://cdn-icons-png.flaticon.com/512/3372/3372092.png" alt="Blueprint Icon">
+    <strong>Customize Your Blueprint</strong>
+    <p>We build a strategy designed around your goals and ICP.</p>
+  </div>
+  <div class="how-step">
+    <img src="https://cdn-icons-png.flaticon.com/512/1705/1705822.png" alt="Precision Icon">
+    <strong>Execute With Precision</strong>
+    <p>Implement targeted messaging and enablement processes.</p>
+  </div>
+  <div class="how-step">
+    <img src="https://cdn-icons-png.flaticon.com/512/6819/6819203.png" alt="Pipeline Icon">
+    <strong>Optimize Your Pipeline</strong>
+    <p>We track progress, adjust strategies, and fuel conversion.</p>
+  </div>
+  <div class="how-step">
+    <img src="https://cdn-icons-png.flaticon.com/512/4211/4211730.png" alt="Scale Icon">
+    <strong>Scale Confidently</strong>
+    <p>Expand operations with a proven growth system.</p>
+  </div>
+</div>
 
   <footer style="background: #09356B; color: white; text-align: center; padding: 1rem;">
     <p>© 2025 Keylight Growth. All rights reserved.</p>
