--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,23 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+  <!-- Contact Hero -->
+<section class="hero">
+  <h1>Let’s Connect</h1>
+  <p>Have questions? Ready to unlock the next phase of growth? Our team is here to help!</p>
+</section>
+
+<!-- Contact Form -->
+<section style="padding: 4rem 2rem; max-width: 800px; margin: auto;">
+  <form action="mailto:support@keylightgrowth.com" method="POST" enctype="text/plain" style="display: flex; flex-direction: column; gap: 1rem;">
+    <input type="text" name="name" placeholder="Your Name" required style="padding: 1rem; border-radius: 6px; border: 1px solid #ccc;" />
+    <input type="email" name="email" placeholder="Your Email" required style="padding: 1rem; border-radius: 6px; border: 1px solid #ccc;" />
+    <textarea name="message" placeholder="Your Message" rows="6" required style="padding: 1rem; border-radius: 6px; border: 1px solid #ccc;"></textarea>
+    <button type="submit" class="unlock-btn">Send Message</button>
+  </form>
+  <p style="margin-top: 1.5rem; text-align: center;">Or email us directly at <a href="mailto:support@keylightgrowth.com">support@keylightgrowth.com</a></p>
+</section>
+
   <nav class="navbar">
     <a href="index.html" class="logo">
       <img src="assets/Logo.png" alt="Keylight Growth Logo" />
