--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,23 @@
 </head>
 <body>
 
-
-  <nav class="navbar">
-    <a href="index.html" class="logo">
-      <img src="assets/Logo.png" alt="Keylight Growth Logo" />
-    </a>
-    <ul class="nav-links">
-      <li><a href="services.html">Services</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="booking.html" class="cta-button">Get Started</a></li>
+ <header style="background-color: white; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; border-bottom: 4px solid #09356B;">
+  <a href="index.html" style="display: flex; align-items: center;">
+    <img src="Logo.png" alt="Keylight Growth Logo" style="height: 40px;">
+  </a>
+  <nav>
+    <ul style="display: flex; gap: 2rem; list-style: none; margin: 0; padding: 0; align-items: center;">
+      <li><a href="services.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Services</a></li>
+      <li><a href="about.html" style="text-decoration: none; color: #09356B; font-weight: bold;">About</a></li>
+      <li><a href="contact.html" style="text-decoration: none; color: #09356B; font-weight: bold;">Contact</a></li>
+      <li>
+        <a href="booking.html" style="background-color: #FFC72C; color: #09356B; padding: 0.5rem 1rem; border-radius: 6px; text-decoration: none; font-weight: bold;">
+          Get Started
+        </a>
+      </li>
     </ul>
   </nav>
+</header>
     <!-- Contact Hero -->
 <section class="hero">
   <h1>Let’s Connect</h1>
