--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,13 @@
   </nav>
 </header>
     <!-- Contact Hero -->
-<section class="hero">
-  <h1>Let’s Connect</h1>
-  <p>Have questions? Ready to unlock the next phase of growth? Our team is here to help!</p>
+<section class="hero contact-hero">
+  <div class="hero-text">
+    <h1>Let’s Connect</h1>
+    <p>Have questions? Ready to unlock the next phase of growth? Our team is here to help!</p>
+  </div>
 </section>
+
 <!-- Contact Form -->
 <section style="padding: 4rem 2rem; max-width: 800px; margin: auto;">
   <form action="mailto:support@keylightgrowth.com" method="POST" enctype="text/plain" style="display: flex; flex-direction: column; gap: 1rem;">
