--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
       <p>"Keylight Growth helped us build a predictable pipeline that doubled our growth rate."</p>
       <h4>- Wendy A., Head of Marketing at MAAN</h4>
     </div>
-    <div class="testimonial">
-      <p>"The enablement frameworks from Keylight transformed our entire revenue team."</p>
-      <h4>- Ryan, Director of Sales Enablement at Cloudflare</h4>
-    </div>
+    <div class="testimonial-card">
+  <p><em>"Keylight helped us prioritize the right plays and execute faster. We saw a clear lift in our conversion rates."</em></p>
+  <p><strong>- Sarah M., VP of Revenue at Dropdeck</strong></p>
+</div>
     <div class="testimonial">
       <p>"The coaching and customized workflows gave us an immediate competitive edge."</p>
       <h4>- Hina, Director of Strategic Programs at Rightsline</h4>
