--- a/index.html
+++ b/index.html
@@ -72,23 +72,24 @@
   </div>
 </section>
 
-<section id="testimonials" class="testimonials">
+<section class="testimonials">
   <h2>What Our Clients Say</h2>
   <div class="testimonial-grid">
-    <div class="testimonial">
-      <p>"Keylight Growth helped us build a predictable pipeline that doubled our growth rate."</p>
-      <h4>- Wendy A., Head of Marketing at MAAN</h4>
+    <div class="testimonial-card">
+      <p><em>"Keylight Growth helped us build a predictable pipeline that doubled our growth rate."</em></p>
+      <p><strong>- Wendy A., Head of Marketing at MAAN</strong></p>
     </div>
-   <div class="testimonial-card">
-  <p><em>"Keylight helped us prioritize the right plays and execute faster. We saw a clear lift in our conversion rates."</em></p>
-  <p><strong>- Sarah M., VP of Revenue at Dropdeck</strong></p>
-</div>
-    <div class="testimonial">
-      <p>"The coaching and customized workflows gave us an immediate competitive edge."</p>
-      <h4>- Hina, Director of Strategic Programs at Rightsline</h4>
+    <div class="testimonial-card">
+      <p><em>"Keylight helped us prioritize the right plays and execute faster. We saw a clear lift in our conversion rates."</em></p>
+      <p><strong>- Sarah M., VP of Revenue at Dropdeck</strong></p>
+    </div>
+    <div class="testimonial-card">
+      <p><em>"The coaching and customized workflows gave us an immediate competitive edge."</em></p>
+      <p><strong>- Hina, Director of Strategic Programs at Rightsline</strong></p>
     </div>
   </div>
 </section>
+
 
 <section id="contact" class="contact-cta">
   <div class="cta-content">
