--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
 <section id="contact" class="contact-cta">
   <div class="cta-content">
-    <h2>Get in Touch with Our Sales Team</h2>
-    <p>Set up your growth consultation today.</p>
+    <h2>Get in Touch with Our Growth Experts</h2>
+    <p>Set up your Key light consultation today.</p>
     <a href="booking.html" class="contact-btn">Book a Call</a>
   </div>
 </section>
