--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
   <blockquote style="font-size: 1.3rem; font-style: italic; max-width: 700px; margin: auto; color: #09356B;">
     “Every startup I worked with kept saying the same thing: ‘We need structure. We need clarity.’ That’s why I started Keylight Growth.”
   </blockquote>
-  <p style="margin-top: 1rem; font-weight: bold; color: #333;">Ahmed Abdel-Raouf, Founder</p>
+  <p style="margin-top: 1rem; font-weight: bold; color: #333;">Ahmed A, Founder</p>
 </section>
 
 <!-- 5. HOW WE STARTED TIMELINE -->
